--- a/index.css
+++ b/index.css
@@ -7,8 +7,7 @@
     justify-content: center;
     align-items: center;
     font-weight: 800;
-    font-family: "Montserrat", sans-serif;
-    background: linear-gradient(to bottom right, #9E2B25, #FCAB10);
+    font-family: "Roboto", sans-serif;
     color: #313628;
 
   }
